# tsarray

./: .gitignore  .travis.yml  Makefile  README.rst  autogen.sh  common.h  compiler.h  configure.ac  dynarray.c  dynarray.h  test-array.c  test.c  test2.c  tsarray.c  tsarray.h  tssparse.c  tssparse.h
src/: Makefile.am  common.h  test-sparse.c  test2-sparse.c  tsarray.c  tsarray.h  tssparse.c
tests/: Makefile.am  check-internal.c  check-static.c  check-tsarray.c  check-tsarray_append.c  check-tsarray_extend.c  check-tsarray_minmax.c  check-tsarray_remove.c  check-tsarray_slice.c  check-tsarray_truncate.c  setupcheck.c  setupcheck.h  test-array.c  test-sparse.c
